express-t2s-app-v3/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-t2s
  namespace: t2s
spec:
  type: ClusterIP
  selector:
    app: express-t2s
  ports:
  - port: 80
    targetPort: 3000
